pantalla home completa

--- a/src/components/home/Banner.astro
+++ b/src/components/home/Banner.astro
@@ -4,15 +4,15 @@ import bannerImg from '@/assets/pet_baner.png'
 // ui components
 import MainLink from '@/ui/MainLink.astro';
 ---
-<div class="bg-colorBgFront flex justify-center items-center gap-10 py-5 px-6">
+<div class="bg-colorBgFront flex justify-center items-center gap-10 py-14 
+               lg:py-10 xl:py-5 px-6 lg:px-12">
   <Image 
-    class=""
+    class="w-[210px] lg:w-[380px] xl:w-[600px]"
     src={bannerImg} 
     alt="banner de dos perritos"/>
   <div class="font-ffPrimary text-colorText">
-    <h1 class="text-sm uppercase mb-2">Todos los productos para tus mascotas</h1>
-    <h3 class="text-5xl mb-8 font-ffText font-bold max-w-[450px]">Se Angel de un Peludito</h3>
-    <MainLink text='Conocer Más' link='#' />
+    <h1 class="text-[11px] lg:text-sm uppercase mb-2">Todos los productos para tus mascotas</h1>
+    <h3 class="text-[20px] lg:text-5xl mb-8 font-ffText font-bold max-w-[450px]">Amor y mimos para tus peludos</h3>
+    <MainLink text='Ver Catálogo' link='#' />
   </div>
-
 </div>
