--- a/src/ui/MainLink.astro
+++ b/src/ui/MainLink.astro
@@ -11,7 +11,7 @@ const { text, link } = Astro.props;
   href={link} 
   class="flex items-center justify-center
         px-10 bg-colorAction text-white rounded-[20px] font-bold max-btn h-10">
-    <span class="text">{text}</span>
+    <span class="text text-sm lg:text-md xl:text-lg">{text}</span>
 </a>
 
 <style>
