--- a/src/components/includes/Header.astro
+++ b/src/components/includes/Header.astro
@@ -4,12 +4,12 @@ import MdiPets from "@/icons/MdiPets.astro";
 import MdiUser from "@/icons/MdiUser.astro";
 ---
 
-<div class="bg-colorBgCard flex justify-between py-6 px-12">
-  <a href="/" class="font-ffText text-[26px] font-bold">
-    Yoru <span class="text-colorAction">Store</span>
+<div class="bg-colorBgCard flex items-center justify-between py-6 px-4 lg:px-12">
+  <a href="/" class="font-ffText text-[20px] md:text-[26px] font-bold">
+    Yoru <span class="hidden md:inline text-colorAction">Store</span>
   </a>
-  <div class="flex gap-2 font-ffPrimary text-lg">
-    <a href="#" class="py-2 px-4 hover:underline hover:text-colorAction">
+  <div class="flex gap-2 font-ffPrimary text-md md:text-lg">
+    <a href="#" class="hidden lg:inline py-2 px-4 hover:underline hover:text-colorAction">
       Home
     </a>
     <a href="#" class="py-2 px-4 hover:underline hover:text-colorAction">
@@ -21,15 +21,15 @@ import MdiUser from "@/icons/MdiUser.astro";
     <a href="#" class="py-2 px-4 hover:underline hover:text-colorAction">
       Liquidacion
     </a>
-    <a href="#" class="py-2 px-4 hover:underline hover:text-colorAction">
+    <a href="#" class="hidden lg:inline py-2 px-4 hover:underline hover:text-colorAction">
       Blog
     </a>
   </div>
   <div class="flex justify-between gap-4">
-    <a href="#" class="py-2 px-2">
+    <a href="#" class="hidden lg:inline py-2 px-2">
       <IcBaselineSearch size="2em" />
     </a>
-    <a href="#" class="py-2 px-2">
+    <a href="#" class="hidden lg:inline py-2 px-2">
       <MdiPets size="2em" />
     </a>
     <a href="#" class="py-2 px-2">
