--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="m-w-[100%]">
+  <body class="m-w-[100%] w-fit">
     <Header />
     <div class="min-h-[95vh]">
       <slot />
