estructura de navegacion

--- a/src/components/home/AdoptionHomeSection.astro
+++ b/src/components/home/AdoptionHomeSection.astro
@@ -33,10 +33,10 @@ import MdiPets from "@/icons/MdiPets.astro";
       </div>
       <div class="flex items-center gap-4 mb-6">
         <IcSharpAttachEmail size="2em" />
-        <p class="font-ffText font-bold text-colorText">Te Notificamos por Em-mail</p>
+        <p class="font-ffText font-bold text-colorText">Te Notificamos por E-mail</p>
       </div>
     </div>
-    <a href="#" class="block bg-colorAction text-colorBg 
+    <a href="/adopcion-mascotas" class="block bg-colorAction text-colorBg 
                       font-bold px-10 py-3 rounded-[20px] w-fit font-ffPrimary">Inscribirme</a>
   </div>
 </div>
