--- a/src/components/home/MainCategorys.astro
+++ b/src/components/home/MainCategorys.astro
@@ -12,7 +12,7 @@ import MainLink from '@/ui/MainLink.astro';
     <div class="p-4">
       <h3 class="text-2xl lg:text-3xl xl:text-4xl max-w-[150px] mb-6 font-ffPrimary 
           font-bold text-colorText">Para Perros</h3>
-      <MainLink  link='#' text='Ver Catálogo' />
+      <MainLink  link='/perros' text='Ver Catálogo' />
     </div>
     <Image  
       src={petDog}
@@ -24,7 +24,7 @@ import MainLink from '@/ui/MainLink.astro';
     <div class="p-4">
       <h3 class="text-2xl lg:text-3xl xl:text-4xl max-w-[150px] mb-6 font-ffPrimary 
       font-bold text-colorText">Para Gatos</h3>
-      <MainLink  link='#' text='Ver Catálogo' />
+      <MainLink  link='/gatos' text='Ver Catálogo' />
     </div>
     <Image  
       src={petCat}
@@ -36,7 +36,7 @@ import MainLink from '@/ui/MainLink.astro';
     <div class="p-4">
       <h3 class="text-2xl lg:text-3xl xl:text-4xl max-w-[150px] mb-6 font-ffPrimary 
       font-bold text-colorText">Otros Peluditos</h3>
-      <MainLink  link='#' text='Ver Catálogo' />
+      <MainLink  link='/exoticos' text='Ver Catálogo' />
     </div>
     <Image  
       src={petBony}
