--- a/src/components/categorys/PopularCategories.astro
+++ b/src/components/categorys/PopularCategories.astro
@@ -9,14 +9,16 @@ const listCategoies = [1,2,3,4,5,6]
   <UTitleSection text="Categorias Populares" />
   <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4 mb-10">
     { listCategoies.map((item, index) => (
-      <a class="flex flex-col justify-center items-center hover:cursor-pointer hover:opacity-50">
-        <Image 
-          src="https://servicios.neunapp.com/media/producto/cat-02-removebg-preview.png"
-          alt="imagen categoria"
-          class="h-40 w-40 rounded-full bg-colorBgCard p-4 mb-2"
-          width={160}
-          height={160} />
-        <p class="font-ffText text-sm">Nombre Categoria</p>
+      <a 
+        href="/perros"
+        class="flex flex-col justify-center items-center hover:cursor-pointer hover:opacity-50">
+          <Image 
+            src="https://servicios.neunapp.com/media/producto/cat-02-removebg-preview.png"
+            alt="imagen categoria"
+            class="h-40 w-40 rounded-full bg-colorBgCard p-4 mb-2"
+            width={160}
+            height={160} />
+          <p class="font-ffText text-sm">Nombre Categoria</p>
       </a>
     )) }
   </div>
