--- a/src/components/home/Banner.astro
+++ b/src/components/home/Banner.astro
@@ -7,12 +7,12 @@ import MainLink from '@/ui/MainLink.astro';
 <div class="bg-colorBgFront flex justify-center items-center gap-10 py-14 
                lg:py-10 xl:py-5 px-6 lg:px-12">
   <Image 
-    class="w-[210px] lg:w-[380px] xl:w-[600px]"
+    class="w-[200px] lg:w-[380px] xl:w-[600px]"
     src={bannerImg} 
     alt="banner de dos perritos"/>
   <div class="font-ffPrimary text-colorText">
     <h1 class="text-[11px] lg:text-sm uppercase mb-2">Todos los productos para tus mascotas</h1>
     <h3 class="text-[20px] lg:text-5xl mb-8 font-ffText font-bold max-w-[450px]">Amor y mimos para tus peludos</h3>
-    <MainLink text='Ver Catálogo' link='#' />
+    <MainLink text='Ver Catálogo' link='/catalogo' />
   </div>
 </div>
