--- a/src/components/home/BetSellerProds.astro
+++ b/src/components/home/BetSellerProds.astro
@@ -17,7 +17,7 @@ const listBestSeller = [1,2,3,4,6,7,8]
         <ProductCard 
           img="https://servicios.neunapp.com/media/producto/pet-01-removebg-preview.png"
           name="Nombre del producto"
-          link="#"
+          link={`/perros/ropa-roja-pequnia-${index}` }
           price={120.52}
         />
       ))
