--- a/src/components/includes/Header.astro
+++ b/src/components/includes/Header.astro
@@ -9,20 +9,20 @@ import MdiUser from "@/icons/MdiUser.astro";
     Yoru <span class="hidden md:inline text-colorAction">Store</span>
   </a>
   <div class="flex gap-2 font-ffPrimary text-md md:text-lg">
-    <a href="#" class="hidden lg:inline py-2 px-4 hover:underline hover:text-colorAction">
+    <a href="/" class="hidden lg:inline py-2 px-4 hover:underline hover:text-colorAction">
       Home
     </a>
-    <a href="#" class="py-2 px-4 hover:underline hover:text-colorAction">
+    <a href="/catalogo" class="py-2 px-4 hover:underline hover:text-colorAction">
       Shop
     </a>
-    <a href="#" class="py-2 px-4 hover:underline hover:text-colorAction">
+    <a href="/categorias" class="py-2 px-4 hover:underline hover:text-colorAction">
       Categorias
     </a>
-    <a href="#" class="py-2 px-4 hover:underline hover:text-colorAction">
+    <a href="/productos-liquidacion" class="py-2 px-4 hover:underline hover:text-colorAction">
       Liquidacion
     </a>
-    <a href="#" class="hidden lg:inline py-2 px-4 hover:underline hover:text-colorAction">
-      Blog
+    <a href="/adopcion-mascotas" class="hidden lg:inline py-2 px-4 hover:underline hover:text-colorAction">
+      Adopción
     </a>
   </div>
   <div class="flex justify-between gap-4">
@@ -32,7 +32,7 @@ import MdiUser from "@/icons/MdiUser.astro";
     <a href="#" class="hidden lg:inline py-2 px-2">
       <MdiPets size="2em" />
     </a>
-    <a href="#" class="py-2 px-2">
+    <a href="/login" class="py-2 px-2">
       <MdiUser size="2em" />
     </a>
   </div>
