--- a/src/ui/ProductCard.astro
+++ b/src/ui/ProductCard.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 
 interface Props {
   img: string;
-  link: "#";
+  link: string;
   name: string;
   price: number;
 }
