--- a/src/pages/catalogo.astro
+++ b/src/pages/catalogo.astro
@@ -1,6 +1,39 @@
 ---
+export const prerender = false;
+
+import { Image } from 'astro:assets';
+import { apiListCatalogoProducts } from '@/api/apiProducts'
 import Layout from "@/layouts/Layout.astro";
+
+const parsedUrl = new URL(Astro.request.url);
+const page = parsedUrl.searchParams.get("page") || '1';
+
+const listProducts = await apiListCatalogoProducts(parseInt(page))
+
+// Obtener el valor del parámetro 'kword'
+
 ---
 <Layout title="Accesorios para Mascotas">
-  <h1>aqui una catalogo general para tienda de mascotas</h1>
+  <h1 class="font-ffPrimary capitalize text-center my-6 text-lg md:text-xl xl:text-2xl">consiente a tus mascotas</h1>
+  <div class="grid gap-4 px-2 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6">
+    { listProducts.map( (product) => (
+      <a 
+        class="flex flex-col justify-center items-center mb-6" 
+        href={`/perros/${product.id}`}>
+          <Image 
+            src={product.main_image ? product.main_image : '../assets/default.png'}
+            alt={`imagen de ${product.name}`}
+            width={100}
+            height={100}
+            class="bg-colorBgCard p-2 w-full hover:scale-110"
+          />
+          <p class="text-colorText text-center mt-2 font-ffText text-sm lg:text-lg">{ product.name }</p>
+          <p class="mt-2 font-ffPrimary font-bold text-colorAction hover:opacity-75 lg:text-xl">
+            S/. { product.price.toLocaleString() }
+          </p>
+      </a>
+    ) ) }
+  </div>
+  { listProducts.length < 1 ? <p class="w-full text-center font-ffPrimary text-colorBgFront font-bold">No pudimos encontrar mas productos</p>: null}
+  
 </Layout>
