--- a/src/pages/catalogo.astro
+++ b/src/pages/catalogo.astro
@@ -1,9 +1,12 @@
 ---
 export const prerender = false;
 
-import { Image } from 'astro:assets';
-import { apiListCatalogoProducts } from '@/api/apiProducts'
 import Layout from "@/layouts/Layout.astro";
+import LayoutContent from "@/layouts/LayoutContent.astro";
+import { apiListCatalogoProducts } from '@/api/apiProducts'
+// components
+import CardProd from '@/components/CardProd.astro';
+import UTitlePage from '@/ui/titles/UTitlePage.astro';
 
 const parsedUrl = new URL(Astro.request.url);
 const page = parsedUrl.searchParams.get("page") || '1';
@@ -14,26 +17,15 @@ const listProducts = await apiListCatalogoProducts(parseInt(page))
 
 ---
 <Layout title="Accesorios para Mascotas">
-  <h1 class="font-ffPrimary capitalize text-center my-6 text-lg md:text-xl xl:text-2xl">consiente a tus mascotas</h1>
-  <div class="grid gap-4 px-2 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6">
-    { listProducts.map( (product) => (
-      <a 
-        class="flex flex-col justify-center items-center mb-6" 
-        href={`/perros/${product.id}`}>
-          <Image 
-            src={product.main_image ? product.main_image : '../assets/default.png'}
-            alt={`imagen de ${product.name}`}
-            width={100}
-            height={100}
-            class="bg-colorBgCard p-2 w-full hover:scale-110"
-          />
-          <p class="text-colorText text-center mt-2 font-ffText text-sm lg:text-lg">{ product.name }</p>
-          <p class="mt-2 font-ffPrimary font-bold text-colorAction hover:opacity-75 lg:text-xl">
-            S/. { product.price.toLocaleString() }
-          </p>
-      </a>
-    ) ) }
-  </div>
-  { listProducts.length < 1 ? <p class="w-full text-center font-ffPrimary text-colorBgFront font-bold">No pudimos encontrar mas productos</p>: null}
-  
+  <LayoutContent>
+    <UTitlePage 
+      title="consiente a tus mascotas"
+    />
+    <div class="grid gap-4 px-2 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5">
+      { listProducts.map( (product) => (
+        <CardProd product={product} />
+      ) ) }
+    </div>
+    { listProducts.length < 1 ? <p class="w-full text-center font-ffPrimary text-colorBgFront font-bold">No pudimos encontrar mas productos</p>: null}
+  </LayoutContent>
 </Layout>
